--- a/슬기로운코딩생활/practice2-1.html
+++ b/슬기로운코딩생활/practice2-1.html
@@ -140,8 +140,8 @@
                         바로가기
                     </div>
                     <div class="card-body">
-                    <a href="https://www.duksung.ac.kr" target=”_blank” class="btn btn-outline-secondary btn-block btn-smy"><i class="fas fa-university"></i>&nbsp;&nbsp; Duksung Women's University</a>
-                    <a href="https://www.Google.com" target=”_blank”  class="btn btn-outline-secondary btn-block btn-sm"><i class="fab fa-google"></i>&nbsp;&nbsp; Google</a>
+                    <a href="https://www.duksung.ac.kr" target="_blank" class="btn btn-outline-secondary btn-block btn-sm"><i class="fas fa-university"></i>&nbsp;&nbsp; Duksung Women's University</a>
+                    <a href="https://www.Google.com" target="_blank"  class="btn btn-outline-secondary btn-block btn-sm"><i class="fab fa-google"></i>&nbsp;&nbsp; Google</a>
                     </div>
                 </div>
             </div>
