--- a/슬기로운코딩생활/practice1-1.html
+++ b/슬기로운코딩생활/practice1-1.html
@@ -4,7 +4,7 @@
     <title>practice1-1</title>
     <link href="./bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/9e746fd04f.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </head>
 <body>
     <!-- navbar -->
@@ -88,7 +88,7 @@
                 <h2>대시 보드</h2>
             </div>
         </div>
-        <table class="table table-striped table-bordered table-hover mt-3">
+        <table class="table table-striped table-bordered table-hover mt-3 text-center">
             <thead>
             <tr>
                 <th scope="col">#</th>
@@ -128,7 +128,7 @@
         </table>
     </div>
     
-    <div class="container">
+    <div class = "container">
         <div class="row">
             <div class="col-lg-6">
                 <div class="card">
@@ -152,7 +152,7 @@
             </div>
         </div>
     </div>
-    
+
     <script>
     data = {
         labels: ['C++', 'JAVA', 'Python', 'C', 'HTML'],
@@ -180,7 +180,8 @@
     var ctx = document.getElementById('doughnutchart');
     var doughnutchart = new Chart(ctx, {
         type: 'doughnut',
-        data: data
+        data: data,
+        options:{}
     });
 
     var ctx2 = document.getElementById('barchart');
