--- a/슬기로운코딩생활/practice2-3.html
+++ b/슬기로운코딩생활/practice2-3.html
@@ -7,7 +7,7 @@
     <!--fontawesome-->
     <script src="https://kit.fontawesome.com/9e746fd04f.js" crossorigin="anonymous"></script>
     <!--jsdeliver-->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </head>
 <body>
     <!--navbar-->
@@ -69,12 +69,14 @@
     <!--대시보드-->
     <div class="container my-5">
         <h2>대시보드</h2>
-        <div class="row" id="chart">
-            <div class="col-lg-5" id="barchart">
-                <canvas id="myBarChart" width="500" height="500"></canvas>
-            </div>
-            <div class="col-lg-7" id="doughnutchart">
-                <canvas id="myDoughnutChart" width="500" height="500"></canvas>
+        <div class = "container">
+            <div class="row" id="chart">
+                <div class="col-lg-5" id="barchart">
+                    <canvas id="myBarChart" width="500" height="500"></canvas>
+                </div>
+                <div class="col-lg-7" id="doughnutchart">
+                    <canvas id="myDoughnutChart" width="500" height="500"></canvas>
+                </div>
             </div>
         </div>
 
@@ -158,7 +160,7 @@
                     <td>Lawyer</td>
                 </tr>
             </tbody>
-            </table>
+        </table>
     </div>
     
     <!--사진-->
@@ -207,6 +209,6 @@
     </footer>
     <!--javascript-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
